clap_derive/tests/ui/struct_flatten.stderr
error: flatten is only allowed on fields
  --> $DIR/struct_flatten.rs:12:24
   |
12 | #[clap(name = "basic", flatten)]
   |                        ^^^^^^^
